BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Product_Metrics_vod__c.object
<CustomObject>
    <description>This object stores all metrics available for all accounts. Each metric is specific to a product, so the logical key is (account, product).</description>
    <fields>
        <fullName>Access_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Access tracking by Product by Account for MM users</description>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>Non-preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disadvantaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consistent to label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Brand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Funding_BMS_EMEA__c</fullName>
        <label>ZDELETE_Account Funding</label>
        <picklist>
            <picklistValues>
                <fullName>No funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual funding request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open funding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Prioritization_BMS_EMEA__c</fullName>
        <label>Account Prioritization</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT(Account_vod__r.Account_Source_Country_BMS_CORE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Source Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Value_BMS_EMEA__c</fullName>
        <label>Account Value</label>
        <picklist>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>Account is the master object for product metrics.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Metrics</relationshipLabel>
        <relationshipName>Product_Metrics_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Adoption_Ladder_BMS_EMEA__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Requirements: New field to Rate the Organisations. Created to Access users.</description>
        <label>Adoption Ladder</label>
        <picklist>
            <picklistValues>
                <fullName>No Rating</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Understand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Believe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agree_BMS_CN__c</fullName>
        <label>Agree</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Awareness__c</fullName>
        <description>Sample metric field.</description>
        <label>Awareness</label>
        <picklist>
            <picklistValues>
                <fullName>Unaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMS_Compound_Expertise_BMS_EMEA__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Requirements: New field created to rate the individual accounts. Used by MSM users.</description>
        <label>BMS Compound Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Not assessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMS_Target_Value_BMS_US__c</fullName>
        <label>BMS Target Value</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fragmented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Contract Effective Date tracking by Product by Account for MM users</description>
        <label>Contract Effective Date</label>
        <picklist>
            <picklistValues>
                <fullName>December 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_BMS_CA__c</fullName>
        <label>Contract End Date</label>
        <picklist>
            <picklistValues>
                <fullName>December 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Status_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Contract Status tracking by Product by Account for MM users</description>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Negotiations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product Catalog records of type Detail Group.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Metrics (Detail Group)</relationshipLabel>
        <relationshipName>Product_Metrics_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dollars_BMS__c</fullName>
        <label>$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Early_Adopter_BMS_US__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Early Adopter by brand field for CV sampling users</description>
        <label>Early Adopter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagements__c</fullName>
        <description>Sample metric field.</description>
        <label>Engagements</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_Target_BMS_US__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Target?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formulary_Inclusion_Difficulty_BMS_EMEA__c</fullName>
        <label>Formulary Inclusion Difficulty</label>
        <picklist>
            <picklistValues>
                <fullName>F4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formulary_Inclusion_Steps_BMS_EMEA__c</fullName>
        <label>Formulary Inclusion Steps</label>
        <picklist>
            <picklistValues>
                <fullName>Not targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In development (early, mid, late)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implemented or Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formulary_KAM_BMS_US__c</fullName>
        <label>Formulary</label>
        <picklist>
            <picklistValues>
                <fullName>Reviewed and denied (off formulary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet reviewed and not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No System Formulary/Local Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet reviewed, but available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On formulary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formulary_Status_BMS_EMEA__c</fullName>
        <label>Formulary Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-work completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocate ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulary approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval validated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulary Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formulary_Status__c</fullName>
        <description>Sample metric field.</description>
        <label>Formulary Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Formulary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On/Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On/Prior Auth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On/Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HP_Usage_Level_BMS_CN__c</fullName>
        <description>HP Usage Level</description>
        <label>HP Usage Level</label>
        <picklist>
            <picklistValues>
                <fullName>Baraclude Loyalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-ETV Loyalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamivudine Trialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Trialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-MD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hopistal_Rank_BMS_CLASS__c</fullName>
        <label>Hopistal Rank</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospital_Rank_BMS_CN__c</fullName>
        <description>Hospital Rank</description>
        <label>Hospital Rank</label>
        <picklist>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region 300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key 350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Target</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_Breast_Cancer_BMS_CN__c</fullName>
        <description>IS - Breast Cancer Adjuvant Chemotherapy</description>
        <label>IS8</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_Core_Message_BMS_CN__c</fullName>
        <description>IS - Core Message</description>
        <label>IS10</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_Defense_Generic_BMS_CN__c</fullName>
        <description>IS - Defense Generic</description>
        <label>IS11</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_HTN_With_CHD_BMS_CN__c</fullName>
        <description>IS - HTN with CHD</description>
        <label>IS4</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_HTN_With_MI_BMS_CN__c</fullName>
        <description>IS - HTN with MI (NSTEMI/STEMI)</description>
        <label>IS1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_HTN_With_UA_PCI_BMS_CN__c</fullName>
        <description>IS - HTN with UA/A-PCI</description>
        <label>IS2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_Heart_Failure_BMS_CN__c</fullName>
        <description>IS - Heart Failure</description>
        <label>IS3</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_NA_BMS_CN__c</fullName>
        <description>IS - N/A</description>
        <label>IS7</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_New_T2DM_Patients_BMS_CN__c</fullName>
        <description>IS - New T2DM patients</description>
        <label>IS5</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_OC_BMS_CN__c</fullName>
        <description>OC of Paraplatin</description>
        <label>IS14</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_Ovarian_Cancer_BMS_CN__c</fullName>
        <description>IS - Ovarian Cancer</description>
        <label>IS9</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_SCLC_BMS_CN__c</fullName>
        <description>SCLC of Paraplatin</description>
        <label>IS13</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_T3DM_Patients_BMS_CN__c</fullName>
        <description>IS - Glucose uncontrol with mono Met dosage 1500mg above T3DM patients</description>
        <label>IS6</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_TKR_Patients_BMS_CN__c</fullName>
        <description>Incremental Shift of Eliquis</description>
        <label>IS12</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>